Added a credit timer
In expiry following happens:
* In Song select you're forced into a song if you havent chosen one yet
* if you have chosen it, you cannot leave, you either play the song or quit the credit
* In gameplay the restart button disappears and the quit button gives a warning, either play to the end of quit

--- a/osu!stream/osu!stream_desktop.csproj
+++ b/osu!stream/osu!stream_desktop.csproj
@@ -60,6 +60,7 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <Compile Include="ArcadeUserData.cs" />
     <Compile Include="AssetManager\NativeAssetManager.cs" />
     <Compile Include="Audio\AudioEngine.cs" />
     <Compile Include="Audio\BackgroundAudioPlayerDesktop.cs" />
