--- a/osu!stream/osu!stream_desktop.csproj
+++ b/osu!stream/osu!stream_desktop.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2698AF2E-F64B-4D61-99F3-52EF2D215F2F}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>osum</RootNamespace>
     <AssemblyName>osu!stream</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
