--- a/osu!stream/osu!stream_desktop.csproj
+++ b/osu!stream/osu!stream_desktop.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Director.cs" />
     <Compile Include="GameBase.cs" />
     <Compile Include="GameBase_ArcadeAuth.cs" />
+    <Compile Include="GameBase_CardReader.cs" />
     <Compile Include="GameModes\Empty.cs" />
     <Compile Include="GameModes\GameComponent.cs" />
     <Compile Include="GameModes\GameMode.cs" />
