--- a/osu!stream/osu!stream_desktop.csproj
+++ b/osu!stream/osu!stream_desktop.csproj
@@ -240,6 +240,9 @@
     <Reference Include="OpenTK">
       <HintPath>OpenTK.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Ports, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.Ports.9.0.0-rc.1.24431.7\lib\net462\System.IO.Ports.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
@@ -496,6 +499,7 @@
     <None Include="Beatmaps\tieff &amp; Natteke - Endless Tower %28RandomJibberish%29.osf2">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
     <None Include="Skins\Default\Futura-CondensedExtraBold.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
