--- a/osu!stream/osu!stream_desktop.csproj
+++ b/osu!stream/osu!stream_desktop.csproj
@@ -72,6 +72,7 @@
     <Compile Include="GameBase.cs" />
     <Compile Include="GameBase_ArcadeAuth.cs" />
     <Compile Include="GameBase_CardReader.cs" />
+    <Compile Include="GameBase_Inactivity.cs" />
     <Compile Include="GameModes\Empty.cs" />
     <Compile Include="GameModes\GameComponent.cs" />
     <Compile Include="GameModes\GameMode.cs" />
